--- a/Toggl.Daneel/ViewControllers/UserAccess/SignupOrLoginChoiceViewController.xib
+++ b/Toggl.Daneel/ViewControllers/UserAccess/SignupOrLoginChoiceViewController.xib
@@ -31,13 +31,13 @@
                         <attributedString key="attributedTitle">
                             <fragment content="Have an account? ">
                                 <attributes>
-                                    <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <font key="NSFont" metaFont="system" size="14"/>
                                 </attributes>
                             </fragment>
                             <fragment content="Log in">
                                 <attributes>
-                                    <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <font key="NSFont" size="14" name=".AppleSystemUIFontEmphasized"/>
                                     <font key="NSOriginalFont" size="14" name=".AppleSystemUIFontEmphasized"/>
                                 </attributes>
