--- a/Toggl.Daneel/ViewControllers/Login.storyboard
+++ b/Toggl.Daneel/ViewControllers/Login.storyboard
@@ -141,10 +141,10 @@
                     </view>
                     <connections>
                         <outlet property="ActivityIndicator" destination="vXI-BS-Qvf" id="TKO-iq-6zh"/>
-                        <outlet property="EmailTextField" destination="Lsa-g7-i4M" id="dFM-Qy-QQQ"/>
-                        <outlet property="ErrorLabel" destination="mES-7Q-qsS" id="8S7-Rk-UOh"/>
                         <outlet property="GoogleLoginButton" destination="3cI-Sa-w2L" id="LAI-yE-h3k"/>
-                        <outlet property="LoginButton" destination="8e6-Gh-xye" id="k4i-fW-b3f"/>
+                        <outlet property="LoginWithEmailButton" destination="8e6-Gh-xye" id="Hfh-nZ-XxS"/>
+                        <outlet property="LoginWithEmailErrorLabel" destination="mES-7Q-qsS" id="08k-fE-XU2"/>
+                        <outlet property="LoginWithEmailTextField" destination="Lsa-g7-i4M" id="PYB-BR-2YK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xjK-qN-gkY" userLabel="First Responder" sceneMemberID="firstResponder"/>
