--- a/Toggl.Daneel/ViewControllers/ForgotPasswordViewController.xib
+++ b/Toggl.Daneel/ViewControllers/ForgotPasswordViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,6 +13,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ForgotPasswordViewController">
             <connections>
                 <outlet property="ActivityIndicator" destination="hKB-g7-bS9" id="6Fg-hB-RbT"/>
+                <outlet property="ContactUsButton" destination="eRm-vL-les" id="73L-b6-Cn2"/>
                 <outlet property="DoneCard" destination="28q-j8-Ayb" id="m30-np-7f6"/>
                 <outlet property="EmailTextField" destination="QWG-pH-eSz" id="4G5-Nh-N7O"/>
                 <outlet property="ErrorLabel" destination="78f-jz-xWb" id="LRf-0u-JYe"/>
@@ -61,7 +62,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="28q-j8-Ayb">
-                    <rect key="frame" x="16" y="446" width="288" height="82"/>
+                    <rect key="frame" x="16" y="446.5" width="288" height="81.5"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="confirmation" translatesAutoresizingMaskIntoConstraints="NO" id="4dN-VK-YsH">
                             <rect key="frame" x="14" y="14" width="16" height="16"/>
@@ -73,7 +74,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Link sent. Please, check your email to reset the password." textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xrV-UA-WAz">
-                            <rect key="frame" x="42" y="37" width="234" height="29"/>
+                            <rect key="frame" x="42" y="36.5" width="234" height="29"/>
                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                             <color key="textColor" red="0.070588235294117646" green="0.53725490196078429" blue="0.74901960784313726" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
@@ -96,6 +97,29 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eRm-vL-les">
+                    <rect key="frame" x="16" y="183" width="124" height="26"/>
+                    <state key="normal">
+                        <attributedString key="attributedTitle">
+                            <fragment content="Need help? ">
+                                <attributes>
+                                    <color key="NSColor" red="0.36862745098039218" green="0.35686274509803922" blue="0.35686274509803922" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <font key="NSFont" size="12" name=".SFNSText"/>
+                                    <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                </attributes>
+                            </fragment>
+                            <fragment content="Contact us">
+                                <attributes>
+                                    <color key="NSColor" red="0.36862745098039218" green="0.35686274509803922" blue="0.35686274509803922" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <font key="NSFont" size="12" name=".SFNSText-Bold"/>
+                                    <font key="NSOriginalFont" size="12" name=".SFNSText-Bold"/>
+                                    <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                    <integer key="NSUnderline" value="1"/>
+                                </attributes>
+                            </fragment>
+                        </attributedString>
+                    </state>
+                </button>
             </subviews>
             <color key="backgroundColor" red="0.98039215686274506" green="0.98431372549019602" blue="0.9882352941176471" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -103,6 +127,7 @@
                 <constraint firstItem="QUM-Iy-uMx" firstAttribute="trailing" secondItem="aCO-Un-b4O" secondAttribute="trailing" constant="16" id="5tH-Yc-Ksv"/>
                 <constraint firstItem="hKB-g7-bS9" firstAttribute="centerY" secondItem="aCO-Un-b4O" secondAttribute="centerY" id="DsX-3H-odE"/>
                 <constraint firstItem="aCO-Un-b4O" firstAttribute="leading" secondItem="QUM-Iy-uMx" secondAttribute="leading" constant="16" id="Mtb-5l-5kL"/>
+                <constraint firstItem="eRm-vL-les" firstAttribute="top" secondItem="78f-jz-xWb" secondAttribute="bottom" constant="8" id="N7t-g6-SEs"/>
                 <constraint firstItem="28q-j8-Ayb" firstAttribute="leading" secondItem="QUM-Iy-uMx" secondAttribute="leading" constant="16" id="RYb-0A-2c9"/>
                 <constraint firstItem="hKB-g7-bS9" firstAttribute="centerX" secondItem="aCO-Un-b4O" secondAttribute="centerX" id="XiJ-7H-lpr"/>
                 <constraint firstItem="78f-jz-xWb" firstAttribute="top" secondItem="QWG-pH-eSz" secondAttribute="bottom" constant="6" id="bUB-cO-ukD"/>
@@ -111,6 +136,7 @@
                 <constraint firstAttribute="bottom" secondItem="28q-j8-Ayb" secondAttribute="bottom" constant="40" id="ffF-sP-ivn"/>
                 <constraint firstItem="QWG-pH-eSz" firstAttribute="top" secondItem="QUM-Iy-uMx" secondAttribute="top" constant="64" id="iYV-P0-dBm"/>
                 <constraint firstItem="QWG-pH-eSz" firstAttribute="leading" secondItem="2" secondAttribute="leading" constant="16" id="ly2-Xg-POE"/>
+                <constraint firstItem="eRm-vL-les" firstAttribute="leading" secondItem="78f-jz-xWb" secondAttribute="leading" id="qoc-Vr-I2x"/>
                 <constraint firstAttribute="trailing" secondItem="78f-jz-xWb" secondAttribute="trailing" constant="16" id="r6h-xj-8wV"/>
                 <constraint firstItem="78f-jz-xWb" firstAttribute="leading" secondItem="QUM-Iy-uMx" secondAttribute="leading" constant="16" id="tpD-O6-Wu1"/>
             </constraints>
