--- a/Toggl.Daneel/ViewControllers/UserAccess/SignupOrLoginChoiceViewController.xib
+++ b/Toggl.Daneel/ViewControllers/UserAccess/SignupOrLoginChoiceViewController.xib
@@ -70,7 +70,7 @@
                     <rect key="frame" x="93.666666666666671" y="245" width="187.66666666666663" height="122"/>
                 </imageView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.98039215686274506" green="0.98431372549019602" blue="0.9882352941176471" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="yBK-tG-Q4A" firstAttribute="leading" secondItem="2" secondAttribute="leading" constant="16" id="3y2-rK-1Io"/>
                 <constraint firstItem="Ri4-EN-7Zg" firstAttribute="leading" secondItem="yBK-tG-Q4A" secondAttribute="leading" id="7RQ-Qj-HDD"/>
